tests/baselines/reference/generatorTypeCheck20.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts(5,13): error TS2741: Property 'x' is missing in type 'Baz' but required in type 'Foo'.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts (1 errors) ====
    class Foo { x: number }
    class Baz { z: number }
    function* g(): IterableIterator<Foo> {
        yield;
        yield * [new Baz];
                ~~~~~~~~~
!!! error TS2741: Property 'x' is missing in type '{|Baz|0|}' but required in type '{|Foo|1|}'.
!!! related TS2728 tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts:1:13: 'x' is declared here.
!!! annotated symbol 0 tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts:2:7
!!! annotated symbol 1 tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck20.ts:1:7
    }